# facilitate

./: .gitignore  LICENSE  Makefile  Pipfile  README.rst  ast_ops_test.py  clustering.py  dependencies.txt  episodes_vs_programs.ipynb  episodes_vs_programs.py  gumtree_test.py  initial_stats.ipynb  main.py  memscript.py  prun0  pyproject.toml  readme.md  student_metrics.ipynb  student_program_util.py  student_sample_statistics.py  test1.json  test5.json  wrapper.py  zappa_settings.example.json  zappa_settings.json
.github/workflows/: poetry.yml  zappa.yml
.ipynb_checkpoints/: episodes_vs_programs-checkpoint.ipynb  student_metrics-checkpoint.ipynb
Vacuum348/: BAD_348_C4C32_play_sessions.json  BAD_348_C4C32_session_data.json  GOOD_348_C4C30_play_sessions.json  GOOD_348_C4C30_session_data_last_program.json  UGLY_348_C4C34_play_sessions.json  UGLY_348_C4C34_session_data.json
analyzers/: count.py  equals.py  gumtree.py  statementlistvisitor.py  visitor.py
examples/: bad.json  good.json  minimal.json  minimal_with_extra.json  parse.py  ugly.json
initial-analysis/: episodes_vs_programs.ipynb  episodes_vs_programs.py  student_metrics.ipynb
initial-analysis/.ipynb_checkpoints/: episodes_vs_programs-checkpoint.ipynb
parsing/: ast.py  parser.py
scripts/: invoke-diff.py
src/facilitate/: __main__.py  algorithms.py  cli.py  diff.py  distance.py  edit.py  gumtree.py  loader.py  mappings.py  model.py  opcode.py  server.py  util.py
src/facilitate/fuzzer/: diff.py  parse.py
src/facilitate/model/: block.py  block_category.py  field.py  input.py  literal.py  node.py  program.py  sequence.py
src/facilitate/scraper/: __init__.py
test/: test_gumtree.py
test.old/: test_ast_ops.py  test_gumtree.py
test.old/tests_resources/: test2.json
test/tests_resources/: test3.json  test4.json
tests/: conftest.py  test_diff.py  test_gumtree.py  test_loader.py  test_mappings.py  test_node.py  test_sequence.py
tests/resources/programs/: double_shadow_blocks.json
tests/resources/programs/spike_curric_arm_movement_getting_stuck_try_it/2605221/: 3.json  8.json
tests/resources/programs/spike_curric_cleaning_the_home_challenge_v2/2605231/: 1.json
tests/resources/programs/spike_curric_getting_started_curriculum/4847838/: 420.json  436.json
tests/resources/programs/spike_curric_investigating_the_collapsed_building_mini_challenge/2952421/: 1094.json
tests/resources/programs/spike_curric_moving_forward_50cm_try_it/2762924/: 11.json  12.json
tests/resources/programs/spike_curric_search_for_ice_part_3_mini_challenge/2952421/: 145.json  89.json
tests/resources/programs/spike_curric_sequential_movements_mini_challenge_curriculum/2952515/: 12.json  45.json
tests/resources/programs/spike_curric_turning_in_place_left_turn_try_it/4847845/: 4.json  5.json
tests/resources/programs/spike_curric_vacuum_mini_challenge/2515268/: 20.json  36.json
tests/resources/programs/spike_curric_vacuum_mini_challenge/2605231/: 4189.json
tests/resources/programs/tricky_cases/add_control_forever/: after.json  before.json
tests/resources/programs/tricky_cases/cannot_find_node/: after.json  before.json
tests/resources/programs/tricky_cases/delete_node_with_kids/: after.json  before.json
tests/resources/programs/tricky_cases/empty_literal_to_int_literal/: after copy.json  after.json  before copy.json  before.json
tests/resources/programs/tricky_cases/merge_two_top_level_sequences/: after.json  before.json
