[tool.poetry]
name = "facilitate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.0"
pytest = "^7.4.3"
pep8-naming = "^0.13.3"
flake8-import-order = "^0.18.2"
flake8-comprehensions = "^3.14.0"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.9.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
