[tool.poetry]
name = "facilitate"
version = "0.1.0"
description = ""
authors = ["Chris Timperley <ctimperley@cmu.edu>", "Leo Chen"]
readme = "README.rst"

[tool.poetry.scripts]
facilitate = 'facilitate.cli:cli'

[tool.poetry.dependencies]
apiflask = "^2.1.0"
click = "^8.1.7"
flask = "^3.0.2"
flask-cors = "^4.0.0"
ijson = "^3.2.3"
loguru = "^0.7.2"
networkx = "^3.2.1"
overrides = "^7.4.0"
pydot = "^2.0.0"
python = "^3.11"
setuptools = "^69.1.1"
zappa = "^0.58.0"
pillow = "^10.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
flake8-comprehensions = "^3.14.0"
flake8-future-annotations = "^1.1.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.3.2"
icecream = "^2.1.3"
matplotlib = "^3.8.2"
mypy = "^1.7.0"
networkx-stubs = "^0.0.1"
nox = "^2023.4.22"
pep8-naming = "^0.13.3"
pydot = "^2.0.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
python = "^3.11"
ruff = "^0.1.6"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
types-flask-cors = "^4.0.0.20240106"
types-pillow = "^10.2.0.20240125"

[tool.mypy]
ignore_missing_imports = false
strict = true

[[tool.mypy.overrides]]
module = "ijson.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]
select = [
    "ALL",  # includes all rules (including new ones)
]
per-file-ignores = {"*/__init__.py" = ["F401"]}
extend-ignore = [
    "ANN101",   # missing type annotation for 'self' in method
    "ANN102",   # missing type annotation for 'cls' in classmethod
    "B024",     # use of abstract base class without abstract methods
    "D100",     # missing docstring in public module
    "D101",     # missing docstring in public class
    "D102",     # missing docstring in public method
    "D103",     # missing docstring in public function
    "D104",     # missing docstring in public package
    "D105",     # missing docstring in magic method
    "D203",     # one-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "D401",     # first line of docstring should be in imperative mood
    "D413",     # missing blank line after last section
    "FIX001",   # unresolved FIXME
    "FIX002",   # TODO found
    "TD001",    # invalid TODO tag: `FIXME`
    "TD002",    # missing author in TODO
    "TD003",    # missing issue link on line following TODO
    "TD004",    # missing colon in TODO
    "TRY003",   # avoid specifying long messages outside the exception class
    "S101",     # use of assertions
    "SLF001",   # private member accessed
    "T201",     # use of print
    "D204",     # 1 blank line required after class docstring
    "C901",     # function is too complex (cyclomatic complexity)
    "PLR0912",  # too many branches
    "PGH003",   # use specific rule codes when ignoring type issues
    "FBT001",   # boolean typed positional argument in function definition
    "ARG001",   # unused function argument
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
